# civetweb

./: CMakeLists.txt
.gear/: 0001-use-system-check.patch  0002-use-system-lua-duktape.patch  0003-fix-svace-null-after-deref-and-use-after-free.patch  0004-fix-test-ssl-cert-path-and-init-library.patch  0005-add-lua-duktape-integration-tests.patch  0006-fix-tls-test-for-openssl3-api.patch  0007-add-websocket-and-openssl3-tests.patch  0008-add-cmake-options-for-http2-and-x-dom-socket.patch  0009-fix-http2-debug-trace-pedantic-errors.patch  civetweb.spec  rules
.gear/tags/: list
docs/: ALT-tests.md
resources/: test_duktape.ssjs  test_lua.lua
src/: CMakeLists.txt  civetweb.c  civetweb_private_lua.h  http2.inl  main.c  mod_duktape.inl  mod_lua.inl
unittest/: CMakeLists.txt  public_server.c
